pre-push hook test3

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,15 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 
-apply from: rootProject.file('gradle/install-git-hooks.gradle')
-
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
+
+    copy {
+        from "../pre-push"
+        into "../.git/hooks"
+        fileMode 0777
+    }
 
     packagingOptions {
         exclude 'META-INF/atomicfu.kotlin_module'
