--- a/gradle/install-git-hooks.gradle
+++ b/gradle/install-git-hooks.gradle
@@ -1,11 +1,20 @@
-tasks.create(name: 'gitExecutableHooks') << {
-    Runtime.getRuntime().exec("chmod -R +x .git/hooks/");
+import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
+
+def hookDest = new File("${rootProject.rootDir}/.git/hooks/pre-push")
+def prePushHook = new File("${rootProject.rootDir}/pre-push")
+
+task installGitHooksTask(type: Copy) {
+    hookDest.delete()
+    hookDest << prePushHook.text
+	fileMode 0775
 }
 
-task installGitHooks(type: Copy) {
-    from new File(rootProject.rootDir, 'pre-push')
-    into { new File(rootProject.rootDir, '.git/hooks') }
+task gitExecutableHooks() {
+	if ( DefaultNativePlatform.getCurrentOperatingSystem().isLinux() 
+			|| DefaultNativePlatform.getCurrentOperatingSystem().isMacOsX() ) {
+		Runtime.getRuntime().exec("chmod -R +x ${hookDest}");
+		println "gitExecutableHooks"
+	}
 }
 
-gitExecutableHooks.dependsOn installGitHooks
-clean.dependsOn gitExecutableHooks
+gitExecutableHooks.dependsOn installGitHooksTask
